--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,25 +37,26 @@
         android:layout_marginLeft="92dp"
         android:layout_marginTop="411dp"
         android:ems="10"
-        android:inputType="number" />
+        android:inputType="numberPassword" />
 
     <EditText
         android:id="@+id/editTextNumber2"
         android:layout_width="29dp"
         android:layout_height="39dp"
         android:ems="10"
-        android:inputType="number"
+        android:inputType="numberPassword"
         tools:layout_editor_absoluteX="131dp"
         tools:layout_editor_absoluteY="359dp"
         android:layout_marginLeft="130dp"
-        android:layout_marginTop="411dp"/>
+        android:layout_marginTop="411dp"
+        />
 
     <EditText
         android:id="@+id/editTextNumber3"
         android:layout_width="29dp"
         android:layout_height="39dp"
         android:ems="10"
-        android:inputType="number"
+        android:inputType="numberPassword"
         tools:layout_editor_absoluteX="174dp"
         tools:layout_editor_absoluteY="359dp"
         android:layout_marginLeft="169dp"
@@ -66,7 +67,7 @@
         android:layout_width="29dp"
         android:layout_height="39dp"
         android:ems="10"
-        android:inputType="number"
+        android:inputType="numberPassword"
         tools:layout_editor_absoluteX="200dp"
         tools:layout_editor_absoluteY="359dp"
         android:layout_marginLeft="207dp"
@@ -77,7 +78,7 @@
         android:layout_width="29dp"
         android:layout_height="39dp"
         android:ems="10"
-        android:inputType="number"
+        android:inputType="numberPassword"
         tools:layout_editor_absoluteX="260dp"
         tools:layout_editor_absoluteY="359dp"
         android:layout_marginLeft="246dp"
@@ -90,7 +91,7 @@
         android:layout_marginLeft="282dp"
         android:layout_marginTop="411dp"
         android:ems="10"
-        android:inputType="number"
+        android:inputType="numberPassword"
         tools:layout_editor_absoluteX="302dp"
         tools:layout_editor_absoluteY="359dp" />
 
